main/default/objects/Custom_List_View__c/Custom_List_View__c.object-meta.xml
<CustomObject>
    <description>Custom Configurations for Workstep Management</description>
    <label>Custom List View</label>
    <nameField>
        <displayFormat>CSL-{00000000}</displayFormat>
        <label>Custom List View Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom List Views</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>