main/default/objects/Custom_List_View__c/fields/Filter_Structure__c.field-meta.xml
<CustomField>
    <fullName>Filter_Structure__c</fullName>
    <label>Filter Structure</label>
    <length>255</length>
    <type>Text</type>
</CustomField>