main/default/objects/Custom_List_View__c/fields/Primary_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Primary_Sort_Field__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Sort Field</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Custom_List_View_Field__c.Custom_List_View__r.Id</field>
            <operation>equals</operation>
            <valueField>$Source.Id</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Custom_List_View_Field__c</referenceTo>
    <relationshipLabel>Primary Sort Views</relationshipLabel>
    <relationshipName>Primary_Sort_Views</relationshipName>
    <type>Lookup</type>
</CustomField>