main/default/objects/Custom_List_View__c/fields/Secondary_Sort_ASC__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Sort_ASC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Secondary Sort ASC</label>
    <type>Checkbox</type>
</CustomField>